projects/vb6parse/snapshots/parsers/cst/assignments/assignment_preserves_whitespace.snap
---
source: projects/vb6parse/tests/assignments/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: "   "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: "   "
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "5"
