projects/vb6parse/snapshots/parsers/cst/assignments/assignment_to_type_member.snap
---
source: projects/vb6parse/tests/assignments/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: MemberAccessExpression
          children:
            - kind: Identifier
              text: person
            - kind: PeriodOperator
              text: "."
            - kind: Identifier
              text: Age
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "25"
        - kind: Newline
          text: "\n"
